LogicModule/src/main/java/Logic/Parser/DBGrammarParser.java
// Generated from /home/hehogcode/Workspace/DataBase/LogicModule/src/main/java/Logic/DBGrammar.g4 by ANTLR 4.8
package Logic.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DBGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, K_CREATE=21, K_DROP=22, K_TABLE=23, K_SHOW=24, 
		K_WHERE=25, K_WHEN=26, K_SELECT=27, K_UPDATE=28, K_FROM=29, K_NULL=30, 
		K_SET=31, K_INSERT=32, K_INTO=33, K_VALUES=34, K_AND=35, K_OR=36, NOT=37, 
		TRUE=38, FALSE=39, K_PRIMARY_KEY=40, K_UNIQUE=41, T_CHAR=42, T_INT=43, 
		T_FLOAT=44, STRING=45, STRING_LITERAL=46, IDENTIFIER=47, SPACE=48, ENTER=49, 
		UNEXPECTED=50, LETTER=51, NUMBER=52, NUMERIC_LITERAL=53;
	public static final int
		RULE_mynumber = 0, RULE_mystring = 1, RULE_signed_number = 2, RULE_name = 3, 
		RULE_mychar = 4, RULE_myint = 5, RULE_myfloat = 6, RULE_type = 7, RULE_parse = 8, 
		RULE_sql_query = 9, RULE_show_create = 10, RULE_create = 11, RULE_drop = 12, 
		RULE_table_name_list = 13, RULE_table = 14, RULE_table_definition = 15, 
		RULE_columns_sourse = 16, RULE_column_def = 17, RULE_column_constraint = 18, 
		RULE_select = 19, RULE_select_where = 20, RULE_table_or_subquery = 21, 
		RULE_select_from = 22, RULE_select_what = 23, RULE_result_column = 24, 
		RULE_insert = 25, RULE_insert_colums = 26, RULE_insert_values = 27, RULE_insert_expr = 28, 
		RULE_update = 29, RULE_update_set = 30, RULE_update_idef = 31, RULE_update_expr = 32, 
		RULE_update_where = 33, RULE_expr = 34, RULE_not_num_value = 35, RULE_operand = 36, 
		RULE_binary_operator_sum_sub = 37, RULE_binary_operator_mul_del = 38, 
		RULE_binary_operator_comp = 39, RULE_binary_operator_eq = 40, RULE_literal_value = 41, 
		RULE_unary_operator = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"mynumber", "mystring", "signed_number", "name", "mychar", "myint", "myfloat", 
			"type", "parse", "sql_query", "show_create", "create", "drop", "table_name_list", 
			"table", "table_definition", "columns_sourse", "column_def", "column_constraint", 
			"select", "select_where", "table_or_subquery", "select_from", "select_what", 
			"result_column", "insert", "insert_colums", "insert_values", "insert_expr", 
			"update", "update_set", "update_idef", "update_expr", "update_where", 
			"expr", "not_num_value", "operand", "binary_operator_sum_sub", "binary_operator_mul_del", 
			"binary_operator_comp", "binary_operator_eq", "literal_value", "unary_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'['", "']'", "'('", "')'", "';'", "','", "'*'", 
			"'='", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'<>'", 
			"'~'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "K_CREATE", "K_DROP", 
			"K_TABLE", "K_SHOW", "K_WHERE", "K_WHEN", "K_SELECT", "K_UPDATE", "K_FROM", 
			"K_NULL", "K_SET", "K_INSERT", "K_INTO", "K_VALUES", "K_AND", "K_OR", 
			"NOT", "TRUE", "FALSE", "K_PRIMARY_KEY", "K_UNIQUE", "T_CHAR", "T_INT", 
			"T_FLOAT", "STRING", "STRING_LITERAL", "IDENTIFIER", "SPACE", "ENTER", 
			"UNEXPECTED", "LETTER", "NUMBER", "NUMERIC_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DBGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DBGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MynumberContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(DBGrammarParser.NUMBER, 0); }
		public TerminalNode NUMERIC_LITERAL() { return getToken(DBGrammarParser.NUMERIC_LITERAL, 0); }
		public MynumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mynumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterMynumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitMynumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitMynumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MynumberContext mynumber() throws RecognitionException {
		MynumberContext _localctx = new MynumberContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mynumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==NUMERIC_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MystringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(DBGrammarParser.STRING, 0); }
		public MystringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mystring; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterMystring(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitMystring(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitMystring(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MystringContext mystring() throws RecognitionException {
		MystringContext _localctx = new MystringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mystring);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Signed_numberContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(DBGrammarParser.NUMERIC_LITERAL, 0); }
		public Signed_numberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signed_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterSigned_number(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitSigned_number(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitSigned_number(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Signed_numberContext signed_number() throws RecognitionException {
		Signed_numberContext _localctx = new Signed_numberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_signed_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(90);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(93);
			match(NUMERIC_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DBGrammarParser.IDENTIFIER, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MycharContext extends ParserRuleContext {
		public TerminalNode T_CHAR() { return getToken(DBGrammarParser.T_CHAR, 0); }
		public TerminalNode NUMBER() { return getToken(DBGrammarParser.NUMBER, 0); }
		public MycharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mychar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterMychar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitMychar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitMychar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MycharContext mychar() throws RecognitionException {
		MycharContext _localctx = new MycharContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mychar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T_CHAR);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(98);
				match(T__2);
				setState(99);
				match(NUMBER);
				setState(100);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MyintContext extends ParserRuleContext {
		public TerminalNode T_INT() { return getToken(DBGrammarParser.T_INT, 0); }
		public TerminalNode NUMBER() { return getToken(DBGrammarParser.NUMBER, 0); }
		public MyintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterMyint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitMyint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitMyint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MyintContext myint() throws RecognitionException {
		MyintContext _localctx = new MyintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_myint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T_INT);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(104);
				match(T__4);
				setState(105);
				match(NUMBER);
				setState(106);
				match(T__5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MyfloatContext extends ParserRuleContext {
		public TerminalNode T_FLOAT() { return getToken(DBGrammarParser.T_FLOAT, 0); }
		public TerminalNode NUMBER() { return getToken(DBGrammarParser.NUMBER, 0); }
		public MyfloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myfloat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterMyfloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitMyfloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitMyfloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MyfloatContext myfloat() throws RecognitionException {
		MyfloatContext _localctx = new MyfloatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_myfloat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T_FLOAT);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(110);
				match(T__4);
				setState(111);
				match(NUMBER);
				setState(112);
				match(T__5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public MyintContext myint() {
			return getRuleContext(MyintContext.class,0);
		}
		public MyfloatContext myfloat() {
			return getRuleContext(MyfloatContext.class,0);
		}
		public MycharContext mychar() {
			return getRuleContext(MycharContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				myint();
				}
				break;
			case T_FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				myfloat();
				}
				break;
			case T_CHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				mychar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseContext extends ParserRuleContext {
		public Sql_queryContext sql_query() {
			return getRuleContext(Sql_queryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DBGrammarParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			sql_query();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(121);
				match(T__6);
				}
			}

			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_queryContext extends ParserRuleContext {
		public CreateContext create() {
			return getRuleContext(CreateContext.class,0);
		}
		public DropContext drop() {
			return getRuleContext(DropContext.class,0);
		}
		public Show_createContext show_create() {
			return getRuleContext(Show_createContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public InsertContext insert() {
			return getRuleContext(InsertContext.class,0);
		}
		public UpdateContext update() {
			return getRuleContext(UpdateContext.class,0);
		}
		public Sql_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterSql_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitSql_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitSql_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_queryContext sql_query() throws RecognitionException {
		Sql_queryContext _localctx = new Sql_queryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sql_query);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				create();
				}
				break;
			case K_DROP:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				drop();
				}
				break;
			case K_SHOW:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				show_create();
				}
				break;
			case K_SELECT:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				select();
				}
				break;
			case K_INSERT:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				insert();
				}
				break;
			case K_UPDATE:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				update();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Show_createContext extends ParserRuleContext {
		public TerminalNode K_SHOW() { return getToken(DBGrammarParser.K_SHOW, 0); }
		public TerminalNode K_CREATE() { return getToken(DBGrammarParser.K_CREATE, 0); }
		public TerminalNode K_TABLE() { return getToken(DBGrammarParser.K_TABLE, 0); }
		public Table_name_listContext table_name_list() {
			return getRuleContext(Table_name_listContext.class,0);
		}
		public Show_createContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_create; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterShow_create(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitShow_create(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitShow_create(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_createContext show_create() throws RecognitionException {
		Show_createContext _localctx = new Show_createContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_show_create);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(K_SHOW);
			setState(135);
			match(K_CREATE);
			setState(136);
			match(K_TABLE);
			setState(137);
			table_name_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContext extends ParserRuleContext {
		public TerminalNode K_CREATE() { return getToken(DBGrammarParser.K_CREATE, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public CreateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterCreate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitCreate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitCreate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContext create() throws RecognitionException {
		CreateContext _localctx = new CreateContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_create);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(K_CREATE);
			setState(140);
			table();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropContext extends ParserRuleContext {
		public TerminalNode K_DROP() { return getToken(DBGrammarParser.K_DROP, 0); }
		public TerminalNode K_TABLE() { return getToken(DBGrammarParser.K_TABLE, 0); }
		public Table_name_listContext table_name_list() {
			return getRuleContext(Table_name_listContext.class,0);
		}
		public DropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).enterDrop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DBGrammarListener ) ((DBGrammarListener)listener).exitDrop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DBGrammarVisitor ) return ((DBGrammarVisitor<? extends T>)visitor).visitDrop(this);
			else return visitor.visitChildren(this);
		}
	}
